@@ -58,11 +58,7 @@ header('Content-Type: text/html; charset='.PLX_CHARSET);
 $plxAdmin = plxAdmin::getInstance();
 
 # Chargement des fichiers de langue en fonction du profil de l'utilisateur connecté
-if(isset($_SESSION['user']) AND !empty($_SESSION['user'])) {
-	$_profil = $plxAdmin->aUsers[$_SESSION['user']];
-	$lang = $_profil['lang'];
-}
-if(empty($lang)) $lang = $plxAdmin->aConf['default_lang'];
+$lang = isset($_SESSION['lang']) ? $_SESSION['lang'] : $plxAdmin->aConf['default_lang'];
 
 loadLang(PLX_CORE.'lang/'.$lang.'/core.php');
 loadLang(PLX_CORE.'lang/'.$lang.'/admin.php');
